--- a/Project/Index.html
+++ b/Project/Index.html
@@ -52,13 +52,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="themes.html">Themes</a>
+                        <a class="nav-link" href="Themes.html">Themes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Promotions.html">Promotions</a>
                     </li> 
                     <li class="nav-item">
-                        <a class="nav-link" href="blogs.html">Blogs</a>
+                        <a class="nav-link" href="Blogs.html">Blogs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="About.html">About</a>
@@ -214,14 +214,14 @@
                             </div>
                             <div class="item">
                                 <a href="">
-                                    <img src="img/promo-img/promo-nha-trang.jpg" alt="">
+                                    <img src="img/promo-img/promo-mu-cang-chai.jpg" alt="">
                                 </a>
                                 <div>
                                     <a href="">
                                         <button class="btn btn--viewmore">View More</button>
                                     </a>
                                 </div>
-                                <p class="item--title">Nha Trang</p>
+                                <p class="item--title">Mù Cang Chải</p>
                             </div>
                             <div class="item">
                                 <a href="">
@@ -537,9 +537,9 @@
     <footer>
         <div class="container">
             <div class="links">
-                <a class="footer-font" href="#">Themes</a>
+                <a class="footer-font" href="Themes.html">Themes</a>
                 <a class="footer-font" href="Promotions.html">Promotions</a>
-                <a class="footer-font" href="#">Blogs</a>
+                <a class="footer-font" href="Blogs.html">Blogs</a>
                 <a class="footer-font" href="About.html">About</a>
             </div>
             <div class="copyright center">2021 - All rights reserved to &copy;Vietnam Experdition</div>
