--- a/Project/Promotions.html
+++ b/Project/Promotions.html
@@ -52,13 +52,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="themes.html">Themes</a>
+                        <a class="nav-link" href="Themes.html">Themes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Promotions.html" style="color: goldenrod;">Promotions</a>
                     </li> 
                     <li class="nav-item">
-                        <a class="nav-link" href="blogs.html">Blogs</a>
+                        <a class="nav-link" href="Blogs.html">Blogs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="About.html">About</a>
@@ -125,10 +125,13 @@
                     <br> 
                     <div class="container">
                         <div class="row mt-5 mb-5 row-promotion">
-                            <div class="col-lg-4 mientrung">
+                            <div class="col-lg-4 mientrung promo">
                                 <div class="promotion-content-img">
                                     <img class="promotion-img" src="img/promo-img/promo-hoi-an.jpg">
                                     <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
+                                        <div class="tag">
+                                            <h5 class="t-white">-15%</h5>
+                                        </div>
                                         <div class="title">
                                             <h2 class="t-white">Hội An</h2>
                                             <span class="line white"></span>
@@ -158,10 +161,13 @@
                                         </div>
                                 </div>       
                             </div>
-                            <div class="col-lg-4 mienbac">
+                            <div class="col-lg-4 mienbac promo">
                                 <div class="promotion-content-img">
                                     <img class="promotion-img" src="img/promo-img/promo-ha-giang.jpg">
                                     <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
+                                        <div class="tag">
+                                            <h5 class="t-white">-35%</h5>
+                                        </div>
                                         <div class="title">
                                             <h2 class="t-white">Hà Giang</h2>
                                             <span class="line white"></span>
@@ -169,21 +175,24 @@
                                         </div>
                                 </div>       
                             </div>
-                            <div class="col-lg-4 mientrung">
+                            <div class="col-lg-4 mienbac">
                                 <div class="promotion-content-img">
-                                    <img class="promotion-img" src="img/promo-img/promo-nha-trang.jpg"">
+                                    <img class="promotion-img" src="img/promo-img/promo-mu-cang-chai.jpg"">
                                     <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
                                         <div class="title">
-                                            <h2 class="t-gold">Nha Trang</h2>
-                                            <span class="line black"></span>
-                                            <h6 class="t-gold">Thành phố biển</h6>
+                                            <h2 class="t-white">Mù Cang Chải</h2>
+                                            <span class="line white"></span>
+                                            <h6 class="t-white">Miền cao</h6>
                                         </div>
                                 </div>       
                             </div>
-                            <div class="col-lg-4 mienbac">
+                            <div class="col-lg-4 mienbac promo">
                                 <div class="promotion-content-img">
                                     <img class="promotion-img" src="img/promo-img/promo-ninh-binh.jpg">
                                     <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
+                                        <div class="tag">
+                                            <h5 class="t-white">-20%</h5>
+                                        </div>
                                         <div class="title">
                                             <h2 class="t-white">Ninh Bình</h2>
                                             <span class="line white"></span>
@@ -346,9 +355,9 @@
     <footer>
         <div class="container">
             <div class="links">
-                <a class="footer-font" href="#">Themes</a>
+                <a class="footer-font" href="Themes.html">Themes</a>
                 <a class="footer-font" href="Promotions.html">Promotions</a>
-                <a class="footer-font" href="#">Blogs</a>
+                <a class="footer-font" href="Blogs.html">Blogs</a>
                 <a class="footer-font" href="About.html">About</a>
             </div>
             <div class="copyright center">2021 - All rights reserved to &copy;Vietnam Experdition</div>
