--- a/Project/Subpage-themes.html
+++ b/Project/Subpage-themes.html
@@ -8,10 +8,9 @@
     <script src="https://kit.fontawesome.com/747940bb1c.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="mystyle.css">
-    <link rel="stylesheet" href="themepage.css">
     <link rel="icon" href="logo/fav-logo.png">
     <script lang="JavaScript" src="myjavascript.js"></script>
-    <title>Vietnam Experdition | Blog</title>
+    <title>Vietnam Experdition | Du lịch Phú Quốc</title>
 </head>
 <body>
     <script>
@@ -95,43 +94,40 @@
     <section>
         <div class="container center">
             <div class="themepage">
-                <h6 class="themepage--heading">Du Lịch Biển</h6>
+                <h1>Du Lịch Biển</h1>
                 <span class="line gold"></span>
-                <h2 class="themepage--title">Những trải nghiệm không nên bỏ lỡ khi đi du lịch Phú Quốc</h2>
-                <h6 class="left t-gold">1. Câu Cá – Lặn Ngắm San Hô Quần Đảo An Thới:</h6>
-                <p class="left ">Câu cá, lặn ngắm san hô là một thú tiêu khiển đặc biệt thú vị tại Phú Quốc. Thủy thủ đoàn giàu kinh nghiệm sẽ định vị các rạn đá là nơi tập trung nhiều cá để bạn có thể câu được những cá mú, cá tràm, cá lù, cá đổng…Chiến lợi phẩm là cá câu đươc sẽ được phục vụ ngay trên tàu.</p>
+                <h2 class="themepage--title">Những trải nghiệm không nên bỏ lỡ khi đi du lịch <span class="t-gold">Phú Quốc</span></h2>
+                <h6 class="left">1. Câu Cá – Lặn Ngắm San Hô Quần Đảo An Thới:</h6>
+                <p class="left">Câu cá, lặn ngắm san hô là một thú tiêu khiển đặc biệt thú vị tại Phú Quốc. Thủy thủ đoàn giàu kinh nghiệm sẽ định vị các rạn đá là nơi tập trung nhiều cá để bạn có thể câu được những cá mú, cá tràm, cá lù, cá đổng…Chiến lợi phẩm là cá câu đươc sẽ được phục vụ ngay trên tàu.</p>
                 <img src="img/theme-page/cauca.jpg" alt="">
                 <p class="left">Hệ thống sinh thái biển đa dạng thuộc quần đảo An Thới là nơi lý tưởng để du khách khám phá thế giới đại dương với hoạt động lặn ngắm san hô, đặc biệt hơn cả là các dải san hô nơi đây được xếp vào bậc nhất Việt Nam về mức độ phong phú với 17 loại cứng, mềm và hải qùy khác nhau.</p>
                 <img src="img/theme-page/sanho.jpg" alt="">
-                <h6 class="left t-gold">2. Leo Núi Tắm Suối – Khám Phá Rừng Nguyên Sinh:</h6>
+                <h6 class="left">2. Leo Núi Tắm Suối – Khám Phá Rừng Nguyên Sinh:</h6>
                 <p class="left"><span class="t-gold">Phú Quốc</span> không chỉ nổi tiếng với biển xanh cát trắng, hòn đảo được mệnh danh là Đảo Ngọc còn nổi tiếng với những con suối nằm sâu trong rừng nguyên sinh mà không phải ai cũng có thể khám phá hết được khi đi <span class="t-gold">du lịch Phú Quốc</span></p>
                 <img src="img/theme-page/rungphuquoc.jpg" alt="">
                 <p class="left">Leo núi, tắm suối, khám phá rừng nguyên sinh những là hoạt động dã ngoại đặc biệt hấp dẫn tại Phú Quốc vào mùa mưa và sau mùa mưa khi những con suối luôn đầy ắp nước từ thượng nguồn đổ về.</p>
                 <img src="img/theme-page/tamsuoiphuquoc.jpg" alt="">
-                <h6 class="left t-gold">3. Thả Mình Cùng Làn Nước Trong Xanh Ở Bãi Sao:</h6>
+                <h6 class="left">3. Thả Mình Cùng Làn Nước Trong Xanh Ở Bãi Sao:</h6>
                 <p class="left"><span class="t-gold">Bãi Sao Phú Quốc</span> nằm về phía Đông Nam, cách thị trấn Dương Đông khoảng 30 km, là một trong những bãi biển đẹp nhất của đảo Phú Quốc với bãi cát trắng phẳng lì và là điểm đến không thể bỏ qua khi đi <span class="t-gold">du lịch Phú Quốc</span></p>
                 <img src="img/theme-page/baisaophuquoc.jpg" alt="">
                 <p class="left">Đến với Bãi Sao, du khách có thể thỏa thích ngâm mình trong làm nước trong xanh và tận hưởng âm vang rì rào của sóng biển vỗ về và cùng lúc thưởng thức các món ăn hải sản tươi ngon của miền biển nhiệt đới.</p>
-                <h6 class="left t-gold">4. Ngắm Hoang Hôn Bãi Trường:</h6>
+                <h6 class="left">4. Ngắm Hoang Hôn Bãi Trường:</h6>
                 <p class="left">Đừng bỏ lỡ cơ hội relax tại đây khi hoàng hôn buông xuống, hãy tạo dáng bên cổng mặt người. Tiểu cảnh này gần đây đã trở thành điểm check-in rất hot của giới trẻ khi đến Phú Quốc.</p>
                 <img src="img/theme-page/hoanghon.jpg" alt="">
                 <p class="left">Ngoài cánh cổng hình mặt người, nơi này còn dựng nhiều tiểu cảnh như nhà tre, cầu gỗ hướng ra biển… đầy thú vị cho “hội sống ảo” tha hồ tạo dáng, chụp ảnh.</p>
                 <img src="img/theme-page/hoanghon2.jpg" alt="">
-                <h6 class="left t-gold">5. Trải Nghiệm “Nhốt Người Thả Thú” Ở Vườn Thú Safari</h6>
+                <h6 class="left">5. Trải Nghiệm “Nhốt Người Thả Thú” Ở Vườn Thú Safari</h6>
                 <p class="left">Đến Phú Quốc mà chưa đến <span class="t-gold">Safari Phú Quốc</span> và tham gia trải nghiệm “nhốt người thả thú” thì quả là đáng tiếc. Trải nghiệm “show” này tại Safari Phú Quốc sẽ rất “đáng đồng tiền bát gạo”.</p>
                 <img src="img/theme-page/safari.jpg" alt="">
                 <p class="left"><span class="t-gold">Vinpearl Safari</span> là vườn thú mở mang tầm quốc tế lớn bậc nhất Việt Nam. Vườn thú này mang 2 điểm đặc biệt “độc nhất vô nhị”. Thứ nhất đây là vườn thú được xây dựng giữa một khu rừng nguyên sinh 500 ha với gần 4.000 cá thể thú như: tê giác, hổ, voi, ngựa vằn, linh dương, bò tót, hươu cao cổ… đến từ khắp nơi trên thế giới. Thứ 2, Ở Safari có một trải nghiệm đặc biệt mang tên “nhốt người thả thú”. Tức là bạn sẽ lên một chiếc xe bus và đi vào môi trường sống bán hoang dã (gần giống với tự nhiên) của các loài thú. Cảm nhận được những con thú đang lại gần sát xe, chặn đầu xe rất thú vị.</p>
                 <img src="img/theme-page/safari2.jpg" alt="">
                 <p class="left">Đây là trải nghiệm đặc biệt khiến cả người lớn và trẻ em ai cũng thích mê. Trên xe luôn rộn ràng tiếng cười nói ríu rít – trầm trồ của những đứa trẻ chỉ chỏ cho nhau “sư tử kìa, hươu cao cổ kìa”…</p>
                 <img src="img/theme-page/safari3.jpg" alt="">
-                <p class="left">Cả người lớn thi thoảng cũng hốt hoảng khi bỗng dưng một “anh tê giác” hay một “chị sư tử” tới chặn đầu xe bus…
-                    <br>
-                    Trải nghiệm ăn trưa trong nhà hàng hươu cao cổ cùng những hoa hậu đồng cỏ Savan cũng rất thú vị. Bạn nên đi Safari buổi sáng để buổi tham quan được trọn vẹn và mát mẻ hơn. Sau đó kết hợp đưa bé đi chơi Vinpearl Land bằng xe bus miễn phí. Đó sẽ là chuyến du ngoạn khiến bé mê thích.
-                </p>
-                <h6 class="left t-gold">6. Vi Vu Cáp Treo Hòn Thơm + Khám Phá Nam Đảo:</h6>
+                <p class="left">Cả người lớn thi thoảng cũng hốt hoảng khi bỗng dưng một “anh tê giác” hay một “chị sư tử” tới chặn đầu xe bus…</p>
+                <p class="left">Trải nghiệm ăn trưa trong nhà hàng hươu cao cổ cùng những hoa hậu đồng cỏ Savan cũng rất thú vị. Bạn nên đi Safari buổi sáng để buổi tham quan được trọn vẹn và mát mẻ hơn. Sau đó kết hợp đưa bé đi chơi Vinpearl Land bằng xe bus miễn phí. Đó sẽ là chuyến du ngoạn khiến bé mê thích.</p>
+                <h6 class="left">6. Vi Vu Cáp Treo Hòn Thơm + Khám Phá Nam Đảo:</h6>
                 <p class="left">Trải nghiệm cảm giác “vi vu từ trên cao”, ngắm toàn cảnh thị trấn và quần đảo An Thới với hành trình cáp treo trên biển dài nhất thế giới để đến với Hòn Thơm, một hòn đảo tuyệt đẹp với bãi cát trắng dưới bóng dừa rợp mát, là nơi tuyệt vời để đắm mình cùng thiên nhiên và chụp hình “sống ảo”.</p>
                 <img src="img/theme-page/captreo.jpg" alt="">
-
                 <div class="like-share">
                     <button class="btn btn-like"><i class="fas fa-thumbs-up"></i> Like</button>
                     <button class="btn btn-share"><i class="fas fa-share-square"></i> Share</button>
@@ -144,17 +140,22 @@
     <section>
         <div class="about-banner--form">
             <div class="container center">
-                <h5 style="letter-spacing: 2px; margin-top: 80px;">stay connected</h5>
-                <span class="line gold"></span>
-                <div class="social-container center">
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-facebook-square" style="color: goldenrod;"></i></a>
-                    </div>
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-instagram" style="color: goldenrod;"></i></a>
-                    </div>
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-linkedin" style="color: goldenrod;"></i></a>
+                <div style="margin: 86px auto;">
+                    <h5 style="letter-spacing: 2px;">Stay connected</h5>
+                    <span class="line gold"></span>
+                    <div class="social-container m-20 center">
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-facebook-f" style="color: goldenrod;"></i></a>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-google-plus-g" style="color: goldenrod;"></i></a>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-instagram" style="color: goldenrod;"></i></a>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-twitter" style="color: goldenrod;"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -275,11 +276,10 @@
     <footer>
         <div class="container">
             <div class="links">
-                <a class="footer-font" href="">Themes</a>
-                <a class="footer-font" href="">Promotions</a>
-                <a class="footer-font" href="">Blogs</a>
-                <a class="footer-font" href="">About</a>
-                <a class="footer-font" href="">Contact</a>
+                <a class="footer-font" href="Themes.html">Themes</a>
+                <a class="footer-font" href="Promotions.html">Promotions</a>
+                <a class="footer-font" href="Blogs.html">Blogs</a>
+                <a class="footer-font" href="About.html">About</a>
             </div>
             <div class="copyright center">2021 - All rights reserved to &copy;Vietnam Experdition</div>
         </div>
