--- a/Project/blogs.html
+++ b/Project/blogs.html
@@ -11,10 +11,9 @@
         <script src="https://kit.fontawesome.com/747940bb1c.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <link rel="stylesheet" href="mystyle.css">
-        <link rel="stylesheet" href="blog.css">
         <link rel="icon" href="logo/fav-logo.png">
         <script lang="JavaScript" src="myjavascript.js"></script>
-        <title>Vietnam Experdition | BLOG</title>
+        <title>Vietnam Experdition | Blogs</title>
     </head>
 <body>
     <script>
@@ -54,13 +53,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="themes.html">Themes</a>
+                        <a class="nav-link" href="Themes.html">Themes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Promotions.html">Promotions</a>
                     </li> 
                     <li class="nav-item">
-                        <a class="nav-link" style="color: goldenrod;" href="blogs.html">Blogs</a>
+                        <a class="nav-link" style="color: goldenrod;" href="Blogs.html">Blogs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="About.html">About</a>
@@ -81,27 +80,29 @@
     </header>
 
     <section>
-        <div class="blogs">
-            <div class="blog--content__banner">
-                <img src="img/blog-img/blog-banner.jpg">
-                <div class="blog--banner__content">
-                        <a href="Index.html" class="t-gold blog--title">Home / </a>BLOG
-                </div>
+        <div class="blog">
+            <div class="container center">
+                <div class="blog-title t-white">
+                    <a class="t-gold fw-bold" href="index.html">Home</a> / Blogs
+                </div> 
             </div>
-            <div class="center" style="margin-top: 110px;">
-                <h5>The Blog</h5>
-                <span class="line gold"></span>
-                <h2 style="margin-top: 35px;">Blog của <span class="t-gold">Reviewer</span></h2>
+            <div class="blog-img-back">
+                <img src="img/blog-img/blog-banner.jpg" alt="">
             </div>
         </div>
     </section>
 
     <section>
-        <div class= "container">                        
+        <div class= "container"> 
+            <div class="center" style="margin-top: 110px;">
+                <h5>The Blog</h5>
+                <span class="line gold"></span>
+                <h2 style="margin-top: 35px;">Blog của <span class="t-gold">Reviewer</span></h2>
+            </div>                       
             <div class= "row blog--content__review">
                 <div class ="col-12 col-sm-8 col-md-4">
                     <div class="blog--item">
-                        <a href="blog-ocean.html">
+                        <a href="Blog-ocean.html">
                             <img src="img/blog-img/blog-phan-thiet.jpg" alt="">
                         </a>
                         <h3 class="blog--item__title">Deep inside "Sand Ocean"</h3>
@@ -116,7 +117,7 @@
                 </div>
                 <div class ="col12 col-sm-6 col-md-4">
                     <div class="blog--item">
-                        <a href="blog-ocean.html">
+                        <a href="Blog-ocean.html">
                             <img src="img/blog-img/blog-ha-noi.jpg" alt="">
                         </a>
                         <h3 class="blog--item__title">Cuộc sống ở Thủ Đô</h3>
@@ -131,7 +132,7 @@
 
                 <div class ="col-12 col-sm-6 col-md-4">
                     <div class="blog--item">
-                        <a href="blog-ocean.html">
+                        <a href="Blog-ocean.html">
                             <img src="img/blog-img/blog-sapa.jpg" alt="">
                         </a>
                         <h3 class="blog--item__title">Ở miền cao có lạnh ?</h3>
@@ -147,7 +148,7 @@
 
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="blog--item">
-                        <a href="blog-ocean.html">
+                        <a href="Blog-ocean.html">
                             <img alt="" src="img/blog-img/blog-vinh-ha-long.jpg">
                         </a>
                         <h3 class="blog--item__title">Chuyến Du Lịch Đáng Nhớ</h3>
@@ -162,7 +163,7 @@
 
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="blog--item">
-                        <a href="blog-ocean.html">
+                        <a href="Blog-ocean.html">
                             <img alt="" src="img/blog-img/blog-da-lat.jpg">
                         </a>
                         <h3 class="blog--item__title">Sáng Sớm Ở Đà Lạt</h3>
@@ -176,7 +177,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="blog--item">
-                        <a href="blog-ocean.html">
+                        <a href="Blog-ocean.html">
                             <img alt="" src="img/blog-img/blog-da-nang.jpg">
                         </a>
                         <h3 class="blog--item__title">Đà Nẵng Về Đêm</h3>
@@ -199,17 +200,22 @@
     <section>
         <div class="about-banner--form">
             <div class="container center">
-                <h5 style="letter-spacing: 2px;">stay connected</h5>
-                <span class="line gold"></span>
-                <div class="social-container center">
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-facebook-square" style="color: goldenrod;"></i></a>
-                    </div>
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-instagram" style="color: goldenrod;"></i></a>
-                    </div>
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-linkedin" style="color: goldenrod;"></i></a>
+                <div style="margin: 86px auto;">
+                    <h5 style="letter-spacing: 2px;">Stay connected</h5>
+                    <span class="line gold"></span>
+                    <div class="social-container m-20 center">
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-facebook-f" style="color: goldenrod;"></i></a>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-google-plus-g" style="color: goldenrod;"></i></a>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-instagram" style="color: goldenrod;"></i></a>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-twitter" style="color: goldenrod;"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -236,8 +242,9 @@
                         </form>
                     </div>
                     <div class="modal-footer" style="display: inline-block; text-align: right;">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Send feedback</button>
+                        <div class="modal-footer-contact">
+                            <button type="button" class="btn btn-primary">Send feedback</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -330,11 +337,10 @@
     <footer>
         <div class="container">
             <div class="links">
-                <a class="footer-font" href="">Themes</a>
-                <a class="footer-font" href="">Promotions</a>
-                <a class="footer-font" href="">Blogs</a>
-                <a class="footer-font" href="">About</a>
-                <a class="footer-font" href="">Contact</a>
+                <a class="footer-font" href="Themes.html">Themes</a>
+                <a class="footer-font" href="Promotions.html">Promotions</a>
+                <a class="footer-font" href="Blogs.html">Blogs</a>
+                <a class="footer-font" href="About.html">About</a>
             </div>
             <div class="copyright center">2021 - All rights reserved to &copy;Vietnam Experdition</div>
         </div>
