--- a/Project/About.html
+++ b/Project/About.html
@@ -53,13 +53,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="themes.html">Themes</a>
+                        <a class="nav-link" href="Themes.html">Themes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Promotions.html">Promotions</a>
                     </li> 
                     <li class="nav-item">
-                        <a class="nav-link" href="blogs.html">Blogs</a>
+                        <a class="nav-link" href="Blogs.html">Blogs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="About.html" style="color: goldenrod;">About</a>
@@ -164,7 +164,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container center" style="padding: 100px 0;">
+            <div class="container center" style="padding-top: 100px;">
                 <h5>Feedback</h5>
                 <span class="line gold"></span>
                 <h2>Khách hàng của chúng tôi<span class="t-gold"> đánh giá</span></h2>
@@ -352,9 +352,9 @@
     <footer>
         <div class="container">
             <div class="links">
-                <a class="footer-font" href="#">Themes</a>
+                <a class="footer-font" href="Themes.html">Themes</a>
                 <a class="footer-font" href="Promotions.html">Promotions</a>
-                <a class="footer-font" href="#">Blogs</a>
+                <a class="footer-font" href="Blogs.html">Blogs</a>
                 <a class="footer-font" href="About.html">About</a>
             </div>
             <div class="copyright center">2021 - All rights reserved to &copy;Vietnam Experdition</div>
