--- a/Project/themes.html
+++ b/Project/themes.html
@@ -11,7 +11,6 @@
     <script src="https://kit.fontawesome.com/747940bb1c.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="mystyle.css">
-    <link rel="stylesheet" href="themes.css">
     <link rel="icon" href="logo/fav-logo.png">
     <script lang="JavaScript" src="myjavascript.js"></script>
     <title>Vietnam Experdition | Themes</title>
@@ -54,13 +53,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="themes.html" style="color: goldenrod;">Themes</a>
+                        <a class="nav-link" href="Themes.html" style="color: goldenrod;">Themes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Promotions.html">Promotions</a>
                     </li> 
                     <li class="nav-item">
-                        <a class="nav-link" href="blogs.html">Blogs</a>
+                        <a class="nav-link" href="Blogs.html">Blogs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="About.html">About</a>
@@ -80,51 +79,45 @@
           </nav>
     </header>
 
-    <!-- Đường line bên này định nghĩa khác với mọi trang. Bên themes.css -->
-    <div class="container-fluid" style="margin-top: 8vh;">
+    <div class="container-fluid" style="margin-top: 71.2px;">
         <!-- Div with section and active -->
         <div class="section one active">
             <div class="section--content">
-                <h2 class="section--title">Du Lịch Miền Núi</h2>
-                <span class="line-gold"></span><br>
+                <h5>Du Lịch Miền Núi</h5>
+                <span class="title-line"></span>
                 <p class="description">
                     Enjoy <i class="keyword">a wonderful day</i> among the moutains
                 </p>
-                <!-- Lấy button bên trang index -->
                 <a href="#moutain"><button type="button" class="btn btn-outline-secondary">View More</button></a>
             </div>
         </div>
-        <!-- All another div with section  -->
         <div class="section two">
             <div class="section--content">
-                <h2 class="section--title">Du Lịch Biển</h2>
-                <span class="line-gold"></span><br>
+                <h5>Du Lịch Biển</h5>
+                <span class="title-line"></span>
                 <p class="description">
                     Enjoy <i class="keyword">a wonderful vacation</i> on the beach
                 </p>
-                <!-- Lấy button bên trang index -->
                 <a href="#beach"><button type="button" class="btn btn-outline-secondary">View More</button></a>
             </div>
         </div>
         <div class="section three">
             <div class="section--content">
-                <h2 class="section--title">Du Lịch Phố Cổ</h2>
-                <span class="line-gold"></span><br>
+                <h5>Du Lịch Phố Cổ</h5>
+                <span class="title-line"></span>
                 <p class="description">
                     Enjoy <i class="keyword">the fresh life</i> in the countryside
                 </p>
-                <!-- Lấy button bên trang index -->
                 <a href="#oldtown"><button type="button" class="btn btn-outline-secondary">View More</button></a>
             </div>
         </div>
         <div class="section four">
             <div class="section--content">
-                <h2 class="section--title">Du Lịch Đảo</h2>
-                <span class="line-gold"></span><br>
+                <h5>Du Lịch Đảo</h5>
+                <span class="title-line"></span><br>
                 <p class="description">
                     Admire <i class="keyword">the wonder</i> of the world
                 </p>
-                <!-- Lấy button bên trang index -->
                 <a href="#island"><button type="button" class="btn btn-outline-secondary">View More</button></a>
             </div>
         </div>
@@ -147,124 +140,124 @@
     </script>
 
     <!-- Du Lịch Biển -->
-    <section id="beach">
+    <section id="beach" class="themes-section">
         <div class="container center beach">
             <h5 class="beach--title">Du lịch biển</h5>
-            <span class="line-gold"></span>
-            <h2 class="beach--heading">Những nơi bạn nên đến khi đi du lịch biển</h2>
+            <span class="line gold"></span>
+            <h2 class="beach--heading">Những nơi bạn nên đến khi đi du lịch <span class="t-gold">biển</span></h2>
             <div class= "row beach--content">
                 <div class ="col-12 col-sm-6 col-md-4 beach--item">
                     <img src="img/themes-img/theme-item-vungtau.jpg" alt="">
                     <p class="beach--content__heading">Thành phố Vũng Tàu</p>
-                    <a href="theme-item.html"><button class="btn btn--view__beach">View More</button></a>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__beach">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-8 beach--item">
                     <img src="img/themes-img/theme-item-quangngai.jpg" alt="">
                     <p class="beach--content__heading">Lý Sơn - Giấc mơ có thật ở Quảng Ngãi</p>
-                    <a href="theme-item.html"><button class="btn btn--view__beach">View More</button></a>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__beach">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-8 beach--item">
                     <img src="img/themes-img/theme-item-phanthiet.jpg" alt="">
                     <p class="beach--content__heading">Thành Phố Phan Thiết</p>
-                    <a href="theme-item.html"><button class="btn btn--view__beach">View More</button></a>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__beach">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-4 beach--item">
                     <img src="img/themes-img/theme-img-camranh.jpg" alt="">
                     <p class="beach--content__heading">Bình Lập Cam Ranh</p>
-                    <a href="theme-item.html"><button class="btn btn--view__beach">View More</button></a>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__beach">View More</button></a>
                 </div>
              </div>
         </div>
     </section>
 
     <!--Du Lịch Miền Núi -->
-    <section id="moutain">
+    <section id="moutain" class="themes-section">
         <div class="container center moutain">
             <h5 class="moutain--title">Du lịch Vùng Cao</h5>
-            <span class="line-gold"></span>
-            <h2 class="moutain--heading">Những nơi bạn nên đến khi đi du lịch vùng cao</h2>
+            <span class="line gold"></span>
+            <h2 class="moutain--heading">Những nơi bạn nên đến khi đi du lịch <span class="t-gold">vùng cao</span></h2>
             <div class= "row moutain--content">
                 <div class ="col-12 col-sm-6 col-md-8 moutain--item">
                     <img src="img/themes-img/theme-item-hobabe.jpg" alt="">
                     <p class="moutain--content__heading">Hồ Ba Bể - Thác Bản Giốc</p>
-                    <a href="theme-item.html"><button class="btn btn--view__moutain">View More</button></a>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__moutain">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-4 moutain--item">
                     <img src="img/themes-img/theme-item-doicuu-vungtau.jpg" alt="">
                     <p class="moutain--content__heading">Đồi Cừu - Vũng Tàu</p>
-                    <a href="theme-item.html"><button class="btn btn--view__moutain">View More</button></a>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__moutain">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-4 moutain--item">
                     <img src="img/themes-img/theme-item-sonla.jpg" alt="">
                     <p class="moutain--content__heading">Tà Xua - Sơn La</p>
-                    <a href="theme-item.html"><button class="btn btn--view__moutain">View More</button></a>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__moutain">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-8 moutain--item">
                     <img src="img/themes-img/theme-item-bacha-laocai.jpg" alt="">
                     <p class="moutain--content__heading">Bắc Hà - Lào Cai</p>
-                    <a href="theme-item.html"><button class="btn btn--view__moutain">View More</button></a>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__moutain">View More</button></a>
                 </div>
              </div>
         </div>
     </section>
 
     <!-- Du Lịch Phố Cổ -->
-    <section id="oldtown">
+    <section id="oldtown" class="themes-section">
         <div class="container center oldtown">
             <h5 class="oldtown--title">Du lịch phố cổ</h5>
-            <span class="line-gold"></span>
-            <h2 class="oldtown--heading">Những nơi bạn nên đến khi đi du phố cổ</h2>
+            <span class="line gold"></span>
+            <h2 class="oldtown--heading">Những nơi bạn nên đến khi đi du lịch <span class="t-gold">phố cổ</span></h2>
             <div class= "row oldtown--content">
                 <div class ="col-12 col-sm-6 col-md-4 oldtown--item">
                     <img src="img/themes-img/theme-item-buivien.jpg" alt="">
                     <p class="oldtown--content__heading">Phố Đi Bộ Bùi Viện</p>
-                    <a href="theme-item.html"><button class="btn btn--view__oldtown">View More</button></a>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__oldtown">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-8 oldtown--item">
                     <img src="img/themes-img/theme-item-tahien-hanoi.jpg" alt="">
                     <p class="oldtown--content__heading">Phố Tạ Hiện - Hà Nội</p>
-                    <a href="theme-item.html"><button class="btn btn--view__oldtown">View More</button></a>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__oldtown">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-8 oldtown--item">
                     <img src="img/themes-img/themes-hoi-an.jpg" alt="">
                     <p class="oldtown--content__heading">Phố Cổ Hội An</p>
-                    <a href="theme-item.html"><button class="btn btn--view__oldtown">View More</button></a>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__oldtown">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-4 oldtown--item">
                     <img src="img/themes-img/theme-item-dongvan-hagiang.jpg" alt="">
                     <p class="oldtown--content__heading" style="color: goldenrod;">Phố Cổ Đồng Văn - Hà Giang</p>
-                    <a href="theme-item.html"><button class="btn btn--view__oldtown">View More</button></a>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__oldtown">View More</button></a>
                 </div>
              </div>
         </div>
     </section>
 
     <!-- Du lịch Đảo -->
-    <section id="island" style="margin-bottom: 50px;">
+    <section id="island" class="themes-section">
         <div class="container center island">
             <h5 class="island--title">Du lịch Biển Đảo</h5>
-            <span class="line-gold"></span>
-            <h2 class="island--heading">Những nơi bạn nên đến khi đi du lịch biển đảo</h2>
+            <span class="line gold"></span>
+            <h2 class="island--heading">Những nơi bạn nên đến khi đi du lịch <span class="t-gold">đảo & quần đảo</span></h2>
             <div class= "row island--content">
                 <div class ="col-12 col-sm-6 col-md-8 island--item">
                     <img src="img/themes-img/theme-item-condao.jpg" alt="">
                     <p class="island--content__heading">Côn Đảo</p>
-                    <a href="theme-item.html"><button class="btn btn--view__island">View More</button></a>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__island">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-4 island--item">
                     <img src="img/themes-img/theme-item-quangngai.jpg" alt="">
                     <p class="island--content__heading">Lý Sơn - Giấc mơ có thật ở Quảng Ngãi</p>
-                    <a href="theme-item.html"><button class="btn btn--view__island">View More</button></a>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__island">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-4 island--item">
                     <img src="img/themes-img/theme-img-phuquoc.jpg" alt="">
                     <p class="island--content__heading">Đảo Phú Quốc</p>
-                    <a href="theme-item.html"><button class="btn btn--view__island">View More</button></a>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__island">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-8 island--item">
                     <img src="img/themes-img/theme-item-daocatba.jpg" alt="">
                     <p class="island--content__heading">Đảo Cát Bà</p>
-                    <a href="theme-item.html"><button class="btn btn--view__island">View More</button></a>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__island">View More</button></a>
                 </div>
              </div>
         </div>
@@ -382,21 +375,26 @@
             </div>
         </div>
     </section>
-    <!-- Cop bên trang about -->
+
     <section>
         <div class="about-banner--form">
             <div class="container center">
-                <h5 style="letter-spacing: 2px; margin-top: 80px;">stay connected</h5>
-                <span class="line gold"></span>
-                <div class="social-container center">
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-facebook-square" style="color: goldenrod;"></i></a>
-                    </div>
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-instagram" style="color: goldenrod;"></i></a>
-                    </div>
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-linkedin" style="color: goldenrod;"></i></a>
+                <div style="margin: 86px auto;">
+                    <h5 style="letter-spacing: 2px;">Stay connected</h5>
+                    <span class="line gold"></span>
+                    <div class="social-container m-20 center">
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-facebook-f" style="color: goldenrod;"></i></a>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-google-plus-g" style="color: goldenrod;"></i></a>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-instagram" style="color: goldenrod;"></i></a>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-twitter" style="color: goldenrod;"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -406,11 +404,10 @@
     <footer>
         <div class="container">
             <div class="links">
-                <a class="footer-font" href="">Themes</a>
-                <a class="footer-font" href="">Promotions</a>
-                <a class="footer-font" href="">Blogs</a>
-                <a class="footer-font" href="">About</a>
-                <a class="footer-font" href="">Contact</a>
+                <a class="footer-font" href="Themes.html">Themes</a>
+                <a class="footer-font" href="Promotions.html">Promotions</a>
+                <a class="footer-font" href="Blogs.html">Blogs</a>
+                <a class="footer-font" href="About.html">About</a>
             </div>
             <div class="copyright center">2021 - All rights reserved to &copy;Vietnam Experdition</div>
         </div>
