--- a/Project/Index.html
+++ b/Project/Index.html
@@ -78,6 +78,53 @@
           </nav>
     </header>
     <section>
+        <div class="btn-boxchat" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+            <i class="fas fa-comments t-gold"
+                style="font-size: 28px; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);"></i>
+        </div>
+        <div class="offcanvas offcanvas-end reset" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+            <div class="offcanvas-header reset">
+                <div class="boxchat-heading">
+                    <img src="img/view5.jpg">
+                    <div>
+                        <h6>Nguyễn Minh Luân</h6>
+                        <h5 class="t-gold"><i class="fas fa-circle t-gold"></i>Đang hoạt động</h5>
+                    </div>
+                    <h5 class="t-gold"><i class="fas fa-star"></i>Admin</h5>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+            </div>
+            <div class="offcanvas-body">
+                <div class="boxchat-body customer">
+                    <div class="user-photo">
+                        <img src="img/view3.jpg">
+                    </div>
+                    <p class="chat-message">Hello !!!</p>
+                    <i class="fas fa-check-square"></i>
+                </div>
+                <div class="boxchat-body admin">
+                    <div class="user-photo">
+                        <img src="img/view5.jpg">
+                    </div>
+                    <p class="chat-message">Bạn cần giúp gì ?</p>
+                    <i class="fas fa-check-square"></i>
+                </div>
+                <div class="boxchat-body customer">
+                    <div class="user-photo">
+                        <img src="img/view3.jpg">
+                    </div>
+                    <p class="chat-message">Mình cần tư vấn chọn Tour nghỉ dưỡng.</p>
+                    <i class="far fa-check-square"></i>
+                </div>
+                <div class="boxchat-input">
+                    <input type="text" placeholder="Nhập tin nhắn của bạn...">
+                    <i class="fas fa-paperclip"></i>
+                    <i class="fas fa-paper-plane"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="height: 100vh;">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -265,7 +312,7 @@
                     <div style="display: block; margin: 0px auto; width: 60%;">
                         <h6>Đam mê du lịch và chia sẻ<span class="t-gold"> những điều kỳ diệu</span> của Việt Nam trên khía cạnh du lịch giải trí. Chúng tôi cung cấp dịch vụ hi-touch cho khách du lịch doanh nghiệp để tạo điều kiện thuận lợi cho nhu cầu đi công tác của họ.</h6>
                     </div>
-                    <button type="button" class="btn about--btn">About Us</button>
+                    <button type="button" class="btn about--btn"><i class="fas fa-info"></i> About Us</button>
                 </div>
             </div>
             <div class="video-back">
@@ -422,6 +469,7 @@
             </div>
         </div>
     </section>
+        
     <section>
         <!-- Liên hệ -->
         <div class="modal fade" id="staticBackdrop-Contact" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
