--- a/Project/blogs.html
+++ b/Project/blogs.html
@@ -80,6 +80,54 @@
     </header>
 
     <section>
+        <div class="btn-boxchat" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+            <i class="fas fa-comments t-gold"
+                style="font-size: 28px; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);"></i>
+        </div>
+        <div class="offcanvas offcanvas-end reset" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+            <div class="offcanvas-header reset">
+                <div class="boxchat-heading">
+                    <img src="img/view5.jpg">
+                    <div>
+                        <h6>Nguyễn Minh Luân</h6>
+                        <h5 class="t-gold"><i class="fas fa-circle t-gold"></i>Đang hoạt động</h5>
+                    </div>
+                    <h5 class="t-gold"><i class="fas fa-star"></i>Admin</h5>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+            </div>
+            <div class="offcanvas-body">
+                <div class="boxchat-body customer">
+                    <div class="user-photo">
+                        <img src="img/view3.jpg">
+                    </div>
+                    <p class="chat-message">Hello !!!</p>
+                    <i class="fas fa-check-square"></i>
+                </div>
+                <div class="boxchat-body admin">
+                    <div class="user-photo">
+                        <img src="img/view5.jpg">
+                    </div>
+                    <p class="chat-message">Bạn cần giúp gì ?</p>
+                    <i class="fas fa-check-square"></i>
+                </div>
+                <div class="boxchat-body customer">
+                    <div class="user-photo">
+                        <img src="img/view3.jpg">
+                    </div>
+                    <p class="chat-message">Mình cần tư vấn chọn Tour nghỉ dưỡng.</p>
+                    <i class="far fa-check-square"></i>
+                </div>
+                <div class="boxchat-input">
+                    <input type="text" placeholder="Nhập tin nhắn của bạn...">
+                    <i class="fas fa-paperclip"></i>
+                    <i class="fas fa-paper-plane"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section>
         <div class="blog">
             <div class="container center">
                 <div class="blog-title t-white">
