--- a/Project/themes.html
+++ b/Project/themes.html
@@ -78,7 +78,53 @@
             </div>
           </nav>
     </header>
-
+    <section>
+        <div class="btn-boxchat" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+            <i class="fas fa-comments t-gold"
+                style="font-size: 28px; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);"></i>
+        </div>
+        <div class="offcanvas offcanvas-end reset" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+            <div class="offcanvas-header reset">
+                <div class="boxchat-heading">
+                    <img src="img/view5.jpg">
+                    <div>
+                        <h6>Nguyễn Minh Luân</h6>
+                        <h5 class="t-gold"><i class="fas fa-circle t-gold"></i>Đang hoạt động</h5>
+                    </div>
+                    <h5 class="t-gold"><i class="fas fa-star"></i>Admin</h5>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+            </div>
+            <div class="offcanvas-body">
+                <div class="boxchat-body customer">
+                    <div class="user-photo">
+                        <img src="img/view3.jpg">
+                    </div>
+                    <p class="chat-message">Hello !!!</p>
+                    <i class="fas fa-check-square"></i>
+                </div>
+                <div class="boxchat-body admin">
+                    <div class="user-photo">
+                        <img src="img/view5.jpg">
+                    </div>
+                    <p class="chat-message">Bạn cần giúp gì ?</p>
+                    <i class="fas fa-check-square"></i>
+                </div>
+                <div class="boxchat-body customer">
+                    <div class="user-photo">
+                        <img src="img/view3.jpg">
+                    </div>
+                    <p class="chat-message">Mình cần tư vấn chọn Tour nghỉ dưỡng.</p>
+                    <i class="far fa-check-square"></i>
+                </div>
+                <div class="boxchat-input">
+                    <input type="text" placeholder="Nhập tin nhắn của bạn...">
+                    <i class="fas fa-paperclip"></i>
+                    <i class="fas fa-paper-plane"></i>
+                </div>
+            </div>
+        </div>
+    </section>
     <div class="container-fluid" style="margin-top: 71.2px;">
         <!-- Div with section and active -->
         <div class="section one active">
@@ -152,8 +198,8 @@
                     <a href="Subpage-themes.html"><button class="btn btn--view__beach">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-8 beach--item">
-                    <img src="img/themes-img/theme-item-quangngai.jpg" alt="">
-                    <p class="beach--content__heading">Lý Sơn - Giấc mơ có thật ở Quảng Ngãi</p>
+                    <img src="img/themes-img/theme-item-quangninh.jpg" alt="">
+                    <p class="beach--content__heading">Vân Đồn - Quảng Ninh</p>
                     <a href="Subpage-themes.html"><button class="btn btn--view__beach">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-8 beach--item">
@@ -163,7 +209,7 @@
                 </div>
                 <div class ="col-12 col-sm-6 col-md-4 beach--item">
                     <img src="img/themes-img/theme-img-camranh.jpg" alt="">
-                    <p class="beach--content__heading">Bình Lập Cam Ranh</p>
+                    <p class="beach--content__heading">Vịnh Cam Ranh</p>
                     <a href="Subpage-themes.html"><button class="btn btn--view__beach">View More</button></a>
                 </div>
              </div>
@@ -178,23 +224,23 @@
             <h2 class="moutain--heading">Những nơi bạn nên đến khi đi du lịch <span class="t-gold">vùng cao</span></h2>
             <div class= "row moutain--content">
                 <div class ="col-12 col-sm-6 col-md-8 moutain--item">
-                    <img src="img/themes-img/theme-item-hobabe.jpg" alt="">
-                    <p class="moutain--content__heading">Hồ Ba Bể - Thác Bản Giốc</p>
+                    <img src="img/themes-img/theme-item-dalat.jpg" alt="">
+                    <p class="moutain--content__heading">Đà Lạt - Thành phố Ngàn Sương</p>
                     <a href="Subpage-themes.html"><button class="btn btn--view__moutain">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-4 moutain--item">
-                    <img src="img/themes-img/theme-item-doicuu-vungtau.jpg" alt="">
-                    <p class="moutain--content__heading">Đồi Cừu - Vũng Tàu</p>
+                    <img src="img/themes-img/theme-item-bangioc.jpg" alt="">
+                    <p class="moutain--content__heading">Thác Bản Giốc - Cao Bằng</p>
                     <a href="Subpage-themes.html"><button class="btn btn--view__moutain">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-4 moutain--item">
                     <img src="img/themes-img/theme-item-sonla.jpg" alt="">
-                    <p class="moutain--content__heading">Tà Xua - Sơn La</p>
+                    <p class="moutain--content__heading">Sơn La</p>
                     <a href="Subpage-themes.html"><button class="btn btn--view__moutain">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-8 moutain--item">
-                    <img src="img/themes-img/theme-item-bacha-laocai.jpg" alt="">
-                    <p class="moutain--content__heading">Bắc Hà - Lào Cai</p>
+                    <img src="img/themes-img/theme-item-gialai.jpg" alt="">
+                    <p class="moutain--content__heading">Gia Lai</p>
                     <a href="Subpage-themes.html"><button class="btn btn--view__moutain">View More</button></a>
                 </div>
              </div>
@@ -209,23 +255,23 @@
             <h2 class="oldtown--heading">Những nơi bạn nên đến khi đi du lịch <span class="t-gold">phố cổ</span></h2>
             <div class= "row oldtown--content">
                 <div class ="col-12 col-sm-6 col-md-4 oldtown--item">
-                    <img src="img/themes-img/theme-item-buivien.jpg" alt="">
-                    <p class="oldtown--content__heading">Phố Đi Bộ Bùi Viện</p>
-                    <a href="Subpage-themes.html"><button class="btn btn--view__oldtown">View More</button></a>
-                </div>
-                <div class ="col-12 col-sm-6 col-md-8 oldtown--item">
                     <img src="img/themes-img/theme-item-tahien-hanoi.jpg" alt="">
                     <p class="oldtown--content__heading">Phố Tạ Hiện - Hà Nội</p>
                     <a href="Subpage-themes.html"><button class="btn btn--view__oldtown">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-8 oldtown--item">
-                    <img src="img/themes-img/themes-hoi-an.jpg" alt="">
+                    <img src="img/themes-img/theme-item-thuathienhue.jpg" alt="">
+                    <p class="oldtown--content__heading">Thừa Thiên Huế</p>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__oldtown">View More</button></a>
+                </div>
+                <div class ="col-12 col-sm-6 col-md-8 oldtown--item">
+                    <img src="img/themes-img/theme-item-hoian.jpg" alt="">
                     <p class="oldtown--content__heading">Phố Cổ Hội An</p>
                     <a href="Subpage-themes.html"><button class="btn btn--view__oldtown">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-4 oldtown--item">
                     <img src="img/themes-img/theme-item-dongvan-hagiang.jpg" alt="">
-                    <p class="oldtown--content__heading" style="color: goldenrod;">Phố Cổ Đồng Văn - Hà Giang</p>
+                    <p class="oldtown--content__heading">Phố Cổ Đồng Văn - Hà Giang</p>
                     <a href="Subpage-themes.html"><button class="btn btn--view__oldtown">View More</button></a>
                 </div>
              </div>
@@ -240,23 +286,23 @@
             <h2 class="island--heading">Những nơi bạn nên đến khi đi du lịch <span class="t-gold">đảo & quần đảo</span></h2>
             <div class= "row island--content">
                 <div class ="col-12 col-sm-6 col-md-8 island--item">
+                    <img src="img/themes-img/theme-item-vandon.jpg" alt="">
+                    <p class="island--content__heading">Bãi biển Minh Châu - Vân Đồn - Quảng Ninh</p>
+                    <a href="Subpage-themes.html"><button class="btn btn--view__island">View More</button></a>
+                </div>
+                <div class ="col-12 col-sm-6 col-md-4 island--item">
                     <img src="img/themes-img/theme-item-condao.jpg" alt="">
-                    <p class="island--content__heading">Côn Đảo</p>
+                    <p class="island--content__heading">Côn Đảo - Bà Rịa Vũng Tàu</p>
                     <a href="Subpage-themes.html"><button class="btn btn--view__island">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-4 island--item">
-                    <img src="img/themes-img/theme-item-quangngai.jpg" alt="">
-                    <p class="island--content__heading">Lý Sơn - Giấc mơ có thật ở Quảng Ngãi</p>
-                    <a href="Subpage-themes.html"><button class="btn btn--view__island">View More</button></a>
-                </div>
-                <div class ="col-12 col-sm-6 col-md-4 island--item">
-                    <img src="img/themes-img/theme-img-phuquoc.jpg" alt="">
-                    <p class="island--content__heading">Đảo Phú Quốc</p>
+                    <img src="img/themes-img/theme-item-daocatba.jpg" alt="">
+                    <p class="island--content__heading">Đảo Cát Bà</p>
                     <a href="Subpage-themes.html"><button class="btn btn--view__island">View More</button></a>
                 </div>
                 <div class ="col-12 col-sm-6 col-md-8 island--item">
-                    <img src="img/themes-img/theme-item-daocatba.jpg" alt="">
-                    <p class="island--content__heading">Đảo Cát Bà</p>
+                    <img src="img/themes-img/theme-img-phuquoc.jpg" alt="">
+                    <p class="island--content__heading">Đảo Phú Quốc</p>
                     <a href="Subpage-themes.html"><button class="btn btn--view__island">View More</button></a>
                 </div>
              </div>
